fix: add  new font + moved further in the layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>christmas-shop</title>
+    <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
     <link href="css/christmas-shop.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -32,14 +33,13 @@
 
 </header>
 <div class="hero_section">
-    <div class="hero_section_container">
-        <img src="img/bg-ball.png"  alt="bg-ball" width="1440px" height="524px">
-        <div class="hero_section_img">
-
-            <img src="img/bg-snow.png"  alt="bg-snow" width="1440px" height="524px">
+    <div class="hero_section_container" >
+       <div class="caption_font">Merry Christmas</div>
+        <div class="header_ball">
+            <div class="montserrat_font">Gift yourself &nbsp the magic of new possibilities</div>
         </div>
-
     </div>
+
 </div>
 </body>
 </html>
